tests/sumo/pedestrian_model/nonInteracting/errors/disconnected_route/tripinfos.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 2022-08-28 19:21:32 by Eclipse SUMO sumo Version v1_14_1+0598-02ca306
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
This file may also be made available under the following Secondary
Licenses when the conditions for such availability set forth in the Eclipse
Public License 2.0 are satisfied: GNU General Public License, version 2
or later which is available at
https://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html
SPDX-License-Identifier: EPL-2.0 OR GPL-2.0-or-later
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <fcd-output value="fcd.xml"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <processing>
        <default.speeddev value="0"/>
        <pedestrian.model value="nonInteracting"/>
        <pedestrian.striping.dawdling value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tripinfo_file.xsd">
    <personinfo id="p0" depart="0.00" type="DEFAULT_PEDTYPE" speedFactor="1.00">
        <walk depart="0.00" departPos="78.65" arrival="16.00" arrivalPos="10.00" duration="16.00" routeLength="20.00" timeLoss="1.60" maxSpeed="1.39"/>
    </personinfo>
</tripinfos>
